Fix spacing on navbar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -96,9 +96,9 @@
 .brandCorner {
   display: flex;
   align-items: center;
-  flex-direction: row;
-  float: left;
-  padding-right: -10%;
+  position: absolute;
+  margin-right: 10px;
+
 }
 
 .game-container {
